--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mqtt-layer",
-  "version": "0.0.1",
+  "name": "@DATATERRAIN-INC/mqtt-layer",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
